<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Play</string>
    <string name="up_next">Up Next</string>
    <string name="by">by</string>
    <string name="from">from</string>
    <string name="album_art">Album Art</string>
    <string name="play_server_url">Play Server URL</string>
    <string name="play_token">Play Token</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="speak">Speak Request</string>
    <string name="error_contacting_play_server">Error contacting play server: {0}</string>
    <string name="notification_ticker">{0} by {1}</string>
    <string name="notification_content">{0} from {1}</string>
    <string name="symbol_star">\u2605</string>
    <string name="unstarring_song">Unstarring \'\'{0}\'\'</string>
    <string name="starring_song">Starring \'\'{0}\'\'</string>
    <string name="starring_failed">Starring \'\'{0}\'\' failed</string>
    <string name="unstarring_failed">Unstarring \'\'{0}\'\' failed</string>
    <string name="refresh">Refresh</string>
    <string name="save_settings">Save Settings</string>
    <string name="removing_song">Removing \'\'{0}\'\'</string>
    <string name="removing_song_failed">Removing \'\'{0}\'\' failed</string>
    <string name="queueing_subject_failed">Queueing \'\'{0}\'\' failed</string>
    <string name="message_confirm_remove">Are you sure you want to remove \'\'{0}\'\' from the queue?</string>
    <string name="title_confirm_remove">Remove Song</string>
    <string name="speech_prompt">What would you like to play?</string>
    <string name="adding_subject_to_the_queue">Adding \'\'{0}\'\' to the queue</string>
    <string name="speech_not_recognized">Speech not recognized</string>
    <string name="multiple_songs_queued">{0} songs added to the queue</string>
    <string name="single_song_queued">1 song added to the queue</string>
    <string name="no_songs_found">No songs found</string>
    <string name="search">Search</string>
    <string name="search_music">Search Music</string>
    <string name="clear_history">Clear History</string>
    <string name="search_again">Search Again</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="queueing_failed">Adding to queue failed</string>
    <string name="adding_song_to_queue">Adding 1 song to the queue</string>
    <string name="adding_songs_to_queue">Adding {0} songs to the queue</string>
    <string name="search_failed">Searching songs failed</string>
    <string name="multiple_selected">{0} selected</string>
    <string name="single_selected">1 selected</string>
    <string name="symbol_check">\u2714</string>
    <string name="now_playing">Now Playing</string>
    <string name="hint_token">abc123</string>
    <string name="hint_url">play.example.com</string>
    <string name="queueing_stars_failed">Failed to add starred songs to the queue</string>
    <string name="play_stars">Play Favorites</string>
    <string name="title_play_album">Play Entire Album</string>
    <string name="message_play_album">Do you want to add all songs from \'\'{0}\'\' to the queue?</string>
    <string name="album_added_to_queue">Added \'\'{0}\'\' to the queue</string>
    <string name="enter_play_server_url">Enter a valid Play Server URL</string>
    <string name="get_token">Get Token</string>
    <string name="settings">Settings</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="star_this_song">Star this song</string>
    <string name="unstar_this_song">Unstar this song</string>
    <string name="view_songs_on_this_album">View songs on this album</string>
    <string name="view_songs_by_this_artist">View songs by this artist</string>
    <string name="select_all">Select All</string>

</resources>