<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/m_pause"
        android:enabled="false"
        android:icon="@drawable/action_play"
        android:showAsAction="ifRoom"
        android:title="@string/play">
    </item>
    <item
        android:id="@+id/m_search"
        android:enabled="false"
        android:icon="@drawable/action_search"
        android:showAsAction="ifRoom"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/m_play_stars"
        android:enabled="false"
        android:icon="@drawable/menu_stars"
        android:showAsAction="never"
        android:title="@string/play_stars">
    </item>
    <item
        android:id="@+id/m_refresh"
        android:enabled="false"
        android:icon="@drawable/menu_refresh"
        android:showAsAction="never"
        android:title="@string/refresh">
    </item>
    <item
        android:id="@+id/m_settings"
        android:icon="@drawable/menu_settings"
        android:showAsAction="never"
        android:title="@string/settings">
    </item>

</menu>