<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/shadow_text_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:text="@string/play_server_url"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_url"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_url"
            android:inputType="textUri" />

        <TextView
            style="@style/shadow_text_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/play_token"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_token"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_token"
            android:inputType="text|textNoSuggestions" />
    </LinearLayout>

</ScrollView>