<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/queued_background"
            android:padding="10dp" >
        
            <ImageView
                android:id="@+id/iv_art"
                android:layout_width="55dp"
                android:layout_height="51dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/album_art" />
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_art"
                android:orientation="vertical"
                android:paddingLeft="10dp" >
        
                <TextView
                    android:id="@+id/tv_artist"
                    style="@style/queue_artist" />
        
                <TextView
                    android:id="@+id/tv_song"
                    style="@style/queue_song" />
        
                <TextView
                    android:id="@+id/tv_album"
                    style="@style/queue_album" />
                
                <TextView
                    android:id="@+id/tv_duration"
                    style="@style/queue_album" />
            </LinearLayout>
        
        </RelativeLayout>
        
        <TextView
            android:id="@+id/tv_soon"
            style="@style/queue_album"
            android:background="@drawable/queued_background"
            android:paddingBottom="10dp" 
            android:paddingLeft="10dp" />

        <include layout="@layout/divider" />

        <RelativeLayout
            android:id="@+id/rl_star_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/queued_background"
            android:paddingLeft="10dp" >

            <ImageView
                android:id="@+id/iv_star_icon"
                android:layout_width="36dp"
                android:contentDescription="@string/starred_status"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/tv_star"
                style="@style/dialog_option_text"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_star_icon"
                android:padding="10dp" />
        </RelativeLayout>

        <include layout="@layout/divider" />

        <RelativeLayout
            android:id="@+id/rl_remove_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/queued_background"
            android:paddingLeft="10dp" >

            <ImageView
                android:id="@+id/iv_remove_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/remove_from_queue"
                android:src="@drawable/action_remove" />

            <TextView
                android:id="@+id/tv_remove"
                style="@style/dialog_option_text"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_remove_icon"
                android:text="@string/remove_from_queue" />
        </RelativeLayout>

        <include layout="@layout/divider" />

        <RelativeLayout
            android:id="@+id/rl_search_album_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/queued_background"
            android:paddingLeft="10dp" >

            <ImageView
                android:id="@+id/iv_search_album_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/view_songs_on_this_album"
                android:src="@drawable/dialog_search_album" />

            <TextView
                style="@style/dialog_option_text"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_search_album_icon"
                android:text="@string/view_songs_on_this_album" />
        </RelativeLayout>

        <include layout="@layout/divider" />

        <RelativeLayout
            android:id="@+id/rl_search_artist_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/queued_background"
            android:paddingLeft="10dp" >

            <ImageView
                android:id="@+id/iv_search_artist_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/view_songs_by_this_artist"
                android:src="@drawable/dialog_search_artist" />

            <TextView
                style="@style/dialog_option_text"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_search_artist_icon"
                android:background="@drawable/queued_background"
                android:text="@string/view_songs_by_this_artist" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>